Add local jitsi and matrix stub

--- a/package.json
+++ b/package.json
@@ -88,6 +88,9 @@
       "destination": "dist/katex.min.css"
     }
   ],
+  "staticFiles": {
+    "staticPath": ["static"]
+  },
   "directories": {
     "test": "tests"
   }
