--- a/package.json
+++ b/package.json
@@ -23,31 +23,32 @@
     "https://github.com/LiaScript/docs/README.md"
   ],
   "scripts": {
+    "clean": "rm -rf dist .parcel-cache",
     "sw": "npx workbox injectManifest workbox-config.js",
     "translate": "elm-i18n-gen lia-localization/locale src/elm/Translations.elm",
     "test": "npx elm-test",
     "watch": "npm run watch:dev",
     "build": "npm run build:app",
-    "build:app": "rm -rf dist .parcel-cache && ./node_modules/parcel/lib/bin.js build --no-source-maps --public-url . src/entry/app/index.html && npm run sw",
-    "watch:app": "./node_modules/parcel-legacy/bin/cli.js serve src/entry/app/index.html --open",
-    "watch:base": "./node_modules/parcel-legacy/bin/cli.js serve src/entry/base/index.html",
-    "build:base": "rm -rf dist .parcel-cache && ./node_modules/parcel/lib/bin.js build --no-source-maps --public-url . src/entry/base/index.html",
-    "build:dev": "rm -rf dist .parcel-cache && ./node_modules/parcel/lib/bin.js build --no-source-maps --public-url . src/entry/dev/index.html && npm run sw",
-    "watch:dev": "./node_modules/parcel-legacy/bin/cli.js serve src/entry/dev/index.html --open",
-    "build:preview": "./node_modules/parcel/lib/bin.js build --no-source-maps --public-url . src/typescript/webcomponents/preview-lia.ts",
-    "build:scorm1.2": "rm -rf dist .parcel-cache && ./node_modules/parcel/lib/bin.js build --no-source-maps --public-url . src/entry/scorm1.2/index.html",
-    "watch:scorm1.2": "./node_modules/parcel-legacy/bin/cli.js serve src/entry/scorm1.2/index.html",
-    "build:worker": "rm -rf dist .parcel-cache && rm -rf dist && ./node_modules/parcel-legacy/bin/cli.js build --no-source-maps --target node src/entry/worker/index.js",
-    "watch:webcomponent": "./node_modules/parcel-legacy/bin/cli.js serve src/entry/webcomponent/index.html --open",
-    "build:webcomponent": "rm -rf dist .parcel-cache && ./node_modules/parcel/lib/bin.js build --no-source-maps src/entry/webcomponent/index.ts && rm dist/README.md",
-    "build:webcomponentPublic": "rm -rf dist .parcel-cache && ./node_modules/parcel/lib/bin.js build --no-source-maps --public-url https://liascript.github.io/webcomponent/ src/entry/webcomponent/index.ts && rm dist/README.md"
+    "build:app": "npx run clean && npx parcel build --no-source-maps --public-url . src/entry/app/index.html && npm run sw",
+    "watch:app": "npx parcel serve src/entry/app/index.html --open",
+    "watch:base": "npx parcel serve src/entry/base/index.html",
+    "build:base": "npx run clean && npx parcel build --no-source-maps --public-url . src/entry/base/index.html",
+    "build:dev": "npx run clean && npx parcel build --no-source-maps --public-url . src/entry/dev/index.html && npm run sw",
+    "watch:dev": "npx parcel serve src/entry/dev/index.html --open",
+    "build:preview": "npx parcel build --no-source-maps --public-url . src/typescript/webcomponents/preview-lia.ts",
+    "build:scorm1.2": "npx run clean && ./node_modules/parcel/lib/bin.js build --no-source-maps --public-url . src/entry/scorm1.2/index.html",
+    "watch:scorm1.2": "npx parcel serve src/entry/scorm1.2/index.html",
+    "build:worker": "npx run clean && npx parcel build --no-source-maps --target node src/entry/worker/index.js",
+    "watch:webcomponent": "npx parcel serve src/entry/webcomponent/index.html --open",
+    "build:webcomponent": "npx run clean && npx parcel build --no-source-maps src/entry/webcomponent/index.ts && rm dist/README.md",
+    "build:webcomponentPublic": "npx run clean && npx parcel build --no-source-maps --public-url https://liascript.github.io/webcomponent/ src/entry/webcomponent/index.ts && rm dist/README.md"
   },
   "devDependencies": {
-    "@parcel/packager-raw-url": "^2.0.1",
-    "@parcel/transformer-elm": "^2.0.1",
-    "@parcel/transformer-image": "^2.0.1",
-    "@parcel/transformer-sass": "^2.0.1",
-    "@parcel/transformer-webmanifest": "^2.0.1",
+    "@parcel/packager-raw-url": "^2.2.1",
+    "@parcel/transformer-elm": "^2.2.1",
+    "@parcel/transformer-image": "^2.2.1",
+    "@parcel/transformer-sass": "^2.2.1",
+    "@parcel/transformer-webmanifest": "^2.2.1",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "@typescript-eslint/parser": "^4.33.0",
     "ace-builds": "^1.4.13",
@@ -61,8 +62,7 @@
     "katex": "^0.13.24",
     "logger.ts": "^1.0.5",
     "node-elm-compiler": "^5.0.6",
-    "parcel": "^2.0.1",
-    "parcel-legacy": "npm:parcel@1.12.3",
+    "parcel": "^2.2.1",
     "parcel-reporter-multiple-static-file-copier": "^1.0.5",
     "sass": "^1.44.0",
     "simplify-scorm": "0.0.1",
