--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
     "node-elm-compiler": "^5.0.6",
     "parcel": "^2.2.1",
     "parcel-reporter-multiple-static-file-copier": "^1.0.5",
-    "sass": "^1.49.0",
+    "sass": "^1.49.7",
     "simplify-scorm": "0.0.1",
     "tsc": "^2.0.4",
     "typescript": "^4.5.5",
@@ -89,7 +89,9 @@
     }
   ],
   "staticFiles": {
-    "staticPath": ["static"]
+    "staticPath": [
+      "static"
+    ]
   },
   "directories": {
     "test": "tests"
