--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "test": "npx elm-test",
     "watch": "npm run watch:dev",
     "build": "npm run build:app",
+    "build:android": "npm run build:indexeddb && cp -r ../LiaBooks/docs dist/res && npx cap copy",
     "build:app": "npm run clean && npx parcel build --no-source-maps --public-url . src/entry/app/index.html && npm run sw",
     "watch:app": "npx parcel serve src/entry/app/index.html --open",
     "build:indexeddb": "npm run clean && npx parcel build --no-source-maps --public-url . src/entry/indexeddb/index.html",
@@ -48,6 +49,7 @@
     "build:webcomponentPublic": "npm run clean && npx parcel build --no-source-maps --public-url https://liascript.github.io/webcomponent/ src/entry/webcomponent/index.ts && rm dist/README.md"
   },
   "devDependencies": {
+    "@capacitor/cli": "^3.4.1",
     "@parcel/packager-raw-url": "^2.3.2",
     "@parcel/transformer-elm": "^2.3.2",
     "@parcel/transformer-image": "^2.3.2",
@@ -98,5 +100,9 @@
   },
   "directories": {
     "test": "tests"
+  },
+  "dependencies": {
+    "@capacitor/android": "^3.4.1",
+    "@capacitor/core": "^3.4.1"
   }
 }
