--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "test": "npx elm-test",
     "watch": "npm run watch:dev",
     "build": "npm run build:app",
-    "build:android": "npm run build:indexeddb && cp -r ../LiaBooks/docs dist/res && npx cap copy",
+    "build:android": "npm run build:indexeddb && npx cap copy",
     "build:app": "npm run clean && npx parcel build --no-source-maps --public-url . src/entry/app/index.html && npm run sw",
     "watch:app": "npx parcel serve src/entry/app/index.html --open",
     "build:indexeddb": "npm run clean && npx parcel build --no-source-maps --public-url . src/entry/indexeddb/index.html",
@@ -102,6 +102,7 @@
     "test": "tests"
   },
   "dependencies": {
+    "@capacitor-community/text-to-speech": "^1.1.2",
     "@capacitor/android": "^3.4.1",
     "@capacitor/core": "^3.4.1"
   }
