--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@typescript-eslint/parser": "^4.33.0",
     "ace-builds": "^1.4.14",
     "caniuse-lite": "^1.0.30001312",
+    "capacitor-resources": "^2.0.5",
     "dexie": "^2.0.4",
     "echarts": "^5.3.0",
     "echarts-wordcloud": "^2.0.0",
