--- a/package.json
+++ b/package.json
@@ -55,10 +55,11 @@
     "@parcel/transformer-webmanifest": "^2.3.2",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "@typescript-eslint/parser": "^4.33.0",
+    "@webcomponents/custom-elements": "^1.5.0",
     "ace-builds": "^1.4.14",
     "caniuse-lite": "^1.0.30001323",
     "dexie": "^2.0.4",
-    "echarts": "^5.3.0",
+    "echarts": "^5.3.2",
     "echarts-wordcloud": "^2.0.0",
     "elm": "^0.19.1-5",
     "elm-hot": "^1.1.6",
