--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "@parcel/transformer-webmanifest": "^2.3.2",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "@typescript-eslint/parser": "^4.33.0",
-    "@webcomponents/custom-elements": "^1.5.0",
+    "@webcomponents/webcomponentsjs": "^2.6.0",
     "ace-builds": "^1.4.14",
     "caniuse-lite": "^1.0.30001323",
     "dexie": "^2.0.4",
@@ -70,6 +70,7 @@
     "node-elm-compiler": "^5.0.6",
     "parcel": "^2.3.2",
     "parcel-reporter-multiple-static-file-copier": "^1.0.5",
+    "resize-observer-polyfill": "^1.5.1",
     "sass": "^1.49.8",
     "tsc": "^2.0.4",
     "typescript": "^4.5.5",
