--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@parcel/packager-raw-url": "^2.6.2",
     "@parcel/transformer-elm": "^2.6.2",
     "@parcel/transformer-image": "^2.6.2",
+    "@parcel/transformer-inline-string": "^2.6.2",
     "@parcel/transformer-sass": "^2.6.2",
     "@parcel/transformer-webmanifest": "^2.6.2",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
