feat(TTS): Support for browser-based TTS output

--- a/package.json
+++ b/package.json
@@ -101,5 +101,9 @@
   },
   "directories": {
     "test": "tests"
+  },
+  "dependencies": {
+    "easy-speech": "^1.2.0",
+    "elm-review": "^2.8.2"
   }
 }
