--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "sass": "^1.56.1",
     "tsc": "^2.0.4",
     "typescript": "^4.9.4",
+    "uint8-to-base64": "^0.2.0",
     "workbox-cli": "^6.5.4"
   },
   "browserslist": [
