--- a/package.json
+++ b/package.json
@@ -79,7 +79,8 @@
     "tsc": "^2.0.4",
     "typescript": "^4.9.4",
     "uint8-to-base64": "^0.2.0",
-    "workbox-cli": "^6.5.4"
+    "workbox-cli": "^6.5.4",
+    "yjs": "^13.5.39"
   },
   "browserslist": [
     "cover 94.0%"
@@ -105,8 +106,5 @@
   },
   "directories": {
     "test": "tests"
-  },
-  "dependencies": {
-    "yjs": "^13.5.39"
   }
 }
