--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "typescript": "^4.9.4",
     "uint8-to-base64": "^0.2.0",
     "workbox-cli": "^6.5.4",
+    "y-generic-sync": "^1.0.5",
     "yjs": "^13.5.39"
   },
   "browserslist": [
