refac: Async loading of sync backends
Reduce and separate the bundle-size of the main lia-script module.

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "sw": "npx workbox injectManifest workbox-config.js",
     "translate": "elm-i18n-gen lia-localization/locale src/elm/Translations.elm",
     "test": "npx elm-test",
+    "analyze": "npx parcel build --no-source-maps --reporter @parcel/reporter-bundle-analyzer src/entry/app/index.html",
     "watch": "npm run watch:dev",
     "build": "npm run build:app",
     "build:app": "npm run clean && npx parcel build --no-source-maps --public-url . src/entry/app/index.html && npm run sw",
@@ -48,12 +49,13 @@
     "build:webcomponentPublic": "npm run clean && npx parcel build --no-source-maps --public-url https://liascript.github.io/webcomponent/ src/entry/webcomponent/index.ts && rm dist/README.md"
   },
   "devDependencies": {
-    "@parcel/packager-raw-url": "^2.8.0",
-    "@parcel/transformer-elm": "^2.8.0",
-    "@parcel/transformer-image": "^2.8.0",
-    "@parcel/transformer-inline-string": "^2.8.0",
-    "@parcel/transformer-sass": "^2.8.0",
-    "@parcel/transformer-webmanifest": "^2.8.0",
+    "@parcel/packager-raw-url": "^2.8.3",
+    "@parcel/reporter-bundle-analyzer": "^2.8.3",
+    "@parcel/transformer-elm": "^2.8.3",
+    "@parcel/transformer-image": "^2.8.3",
+    "@parcel/transformer-inline-string": "^2.8.3",
+    "@parcel/transformer-sass": "^2.8.3",
+    "@parcel/transformer-webmanifest": "^2.8.3",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "@typescript-eslint/parser": "^4.33.0",
     "@webcomponents/webcomponentsjs": "^2.6.0",
@@ -73,7 +75,7 @@
     "logger.ts": "^1.0.5",
     "matrix-crdt": "^0.2.0",
     "node-elm-compiler": "^5.0.6",
-    "parcel": "^2.8.0",
+    "parcel": "^2.8.3",
     "parcel-reporter-multiple-static-file-copier": "^1.0.5",
     "process": "^0.11.10",
     "resize-observer-polyfill": "^1.5.1",
