--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "minify:js": "find dist -name \"*.js\" -print0 | xargs -0 -P 4 -I {} sh -c 'before=$(wc -c < {}); minify {} > {}.min && after=$(wc -c < {}.min); if [ ${after} -lt ${before} ]; then mv {}.min {}; reduction=$((${before}-${after})); percent=$(awk \"BEGIN {printf \\\"%.2f\\\", ${reduction}/${before}*100}\"); echo \"{} reduced from ${before} to ${after} bytes (${percent}% reduction)\"; else rm {}.min; echo \"{} no reduction achieved, file size unchanged\"; fi'"
   },
   "devDependencies": {
+    "@convergencelabs/ace-collab-ext": "^0.6.0",
     "@parcel/packager-raw-url": "^2.8.3",
     "@parcel/reporter-bundle-analyzer": "^2.8.3",
     "@parcel/transformer-elm": "^2.8.3",
@@ -78,6 +79,7 @@
     "node-elm-compiler": "^5.0.6",
     "parcel": "^2.8.3",
     "parcel-reporter-multiple-static-file-copier": "^1.0.5",
+    "parcel-reporter-static-files-copy": "^1.5.0",
     "process": "^0.11.10",
     "resize-observer-polyfill": "^1.5.1",
     "sass": "^1.58.1",
@@ -92,25 +94,18 @@
   "browserslist": [
     "cover 90.0%"
   ],
-  "multipleStaticFileCopier": [
+  "staticFiles": [
     {
-      "origin": "static",
-      "destination": "dist/"
+      "staticPath": "static"
     },
     {
-      "origin": "node_modules/ace-builds/src-min-noconflict",
-      "destination": "dist/editor/"
+      "staticPath": "node_modules/katex/dist/katex.min.css"
     },
     {
-      "origin": "node_modules/katex/dist/katex.min.css",
-      "destination": "dist/katex.min.css"
+      "staticPath": "node_modules/ace-builds/src-min-noconflict",
+      "staticOutPath": "editor"
     }
   ],
-  "staticFiles": {
-    "staticPath": [
-      "static"
-    ]
-  },
   "directories": {
     "test": "tests"
   }
