--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "parcel": "^2.8.3",
     "parcel-reporter-multiple-static-file-copier": "^1.0.5",
     "parcel-reporter-static-files-copy": "^1.5.0",
+    "pdfast": "^0.2.0",
     "process": "^0.11.10",
     "resize-observer-polyfill": "^1.5.1",
     "sass": "^1.58.1",
