--- a/package.json
+++ b/package.json
@@ -27,26 +27,26 @@
     "sw": "npx workbox injectManifest workbox-config.js",
     "translate": "elm-i18n-gen lia-localization/locale src/elm/Translations.elm",
     "test": "npx elm-test",
-    "analyze": "npm run clean && npx parcel build --no-source-maps --reporter @parcel/reporter-bundle-analyzer src/entry/app/index.html",
+    "analyze": "npm run clean && npx parcel build --no-source-maps --no-scope-hoist --reporter @parcel/reporter-bundle-analyzer src/entry/app/index.html",
     "watch": "npm run watch:dev",
     "build": "npm run build:app",
-    "build:app": "npm run clean && npx parcel build --no-source-maps --public-url . src/entry/app/index.html && npm run sw",
+    "build:app": "npm run clean && npx parcel build --no-source-maps --no-scope-hoist --public-url . src/entry/app/index.html && npm run sw",
     "watch:app": "npx parcel serve src/entry/app/index.html --open",
-    "build:indexeddb": "npm run clean && npx parcel build --no-source-maps --public-url . src/entry/indexeddb/index.html",
+    "build:indexeddb": "npm run clean && npx parcel build --no-source-maps --no-scope-hoist --public-url . src/entry/indexeddb/index.html",
     "watch:indexeddb": "npx parcel serve src/entry/indexeddb/index.html --open",
     "watch:base": "npx parcel serve src/entry/base/index.html",
-    "build:base": "npm run clean && npx parcel build --no-source-maps --public-url . src/entry/base/index.html",
-    "build:dev": "npm run clean && npx parcel build --no-source-maps --public-url . src/entry/dev/index.html && npm run sw",
+    "build:base": "npm run clean && npx parcel build --no-source-maps --no-scope-hoist --public-url . src/entry/base/index.html",
+    "build:dev": "npm run clean && npx parcel build --no-source-maps --no-scope-hoist --public-url . src/entry/dev/index.html && npm run sw",
     "watch:dev": "npx parcel serve src/entry/dev/index.html --open",
-    "build:preview": "npx parcel build --no-source-maps --public-url . src/typescript/webcomponents/preview-lia.ts",
-    "build:scorm1.2": "npm run clean && ./node_modules/parcel/lib/bin.js build --no-source-maps --public-url . src/entry/scorm1.2/index.html",
+    "build:preview": "npx parcel build --no-source-maps --no-scope-hoist --public-url . src/typescript/webcomponents/preview-lia.ts",
+    "build:scorm1.2": "npm run clean && ./node_modules/parcel/lib/bin.js build --no-source-maps --no-scope-hoist --public-url . src/entry/scorm1.2/index.html",
     "watch:scorm1.2": "npx parcel serve src/entry/scorm1.2/index.html",
-    "build:scorm2004": "npm run clean && ./node_modules/parcel/lib/bin.js build --no-source-maps --public-url . src/entry/scorm2004/index.html",
+    "build:scorm2004": "npm run clean && ./node_modules/parcel/lib/bin.js build --no-source-maps --no-scope-hoist --public-url . src/entry/scorm2004/index.html",
     "watch:scorm2004": "npx parcel serve src/entry/scorm2004/index.html",
-    "build:worker": "npm run clean && npx parcel build --no-source-maps --target node src/entry/worker/index.js",
+    "build:worker": "npm run clean && npx parcel build --no-source-maps --no-scope-hoist --target node src/entry/worker/index.js",
     "watch:webcomponent": "npx parcel serve src/entry/webcomponent/index.html --open",
-    "build:webcomponent": "npm run clean && npx parcel build --no-source-maps src/entry/webcomponent/index.ts && rm dist/README.md",
-    "build:webcomponentPublic": "npm run clean && npx parcel build --no-source-maps --public-url https://liascript.github.io/webcomponent/ src/entry/webcomponent/index.ts && rm dist/README.md",
+    "build:webcomponent": "npm run clean && npx parcel build --no-source-maps --no-scope-hoist src/entry/webcomponent/index.ts && rm dist/README.md",
+    "build:webcomponentPublic": "npm run clean && npx parcel build --no-source-maps --no-scope-hoist --public-url https://liascript.github.io/webcomponent/ src/entry/webcomponent/index.ts && rm dist/README.md",
     "minify:js": "find dist -name \"*.js\" -print0 | xargs -0 -P 4 -I {} sh -c 'before=$(wc -c < {}); minify {} > {}.min && after=$(wc -c < {}.min); if [ ${after} -lt ${before} ]; then mv {}.min {}; reduction=$((${before}-${after})); percent=$(awk \"BEGIN {printf \\\"%.2f\\\", ${reduction}/${before}*100}\"); echo \"{} reduced from ${before} to ${after} bytes (${percent}% reduction)\"; else rm {}.min; echo \"{} no reduction achieved, file size unchanged\"; fi'"
   },
   "devDependencies": {
