--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@liascript/editor",
-  "version": "1.1.3--0.14.10",
+  "version": "1.1.4--0.14.10",
   "author": "André Dietrich",
   "license": "BSD-3-Clause",
   "description": "An extended Markdown interpreter for the creation of interactive online courses.",
@@ -22,6 +22,7 @@
   "man": [
     "https://github.com/LiaScript/docs/README.md"
   ],
+  "main": "dist/index.js",
   "scripts": {
     "clean": "rm -rf dist .parcel-cache",
     "sw": "npx workbox injectManifest workbox-config.js",
