--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "build:base": "npm run clean && npx parcel build --no-source-maps --public-url . src/entry/base/index.html",
     "build:dev": "npm run clean && npx parcel build --no-source-maps --public-url . src/entry/dev/index.html && npm run sw",
     "watch:dev": "npx parcel serve src/entry/dev/index.html --open",
+    "build:library": "npm run clean && npx parcel build --no-source-maps --public-url . src/entry/library/index.ts",
+    "watch:library": "npx parcel serve src/entry/library/index.html --open",
     "build:preview": "npx parcel build --no-source-maps --public-url . src/typescript/webcomponents/preview-lia.ts",
     "build:scorm1.2": "npm run clean && npx parcel build --no-source-maps --public-url . src/entry/scorm1.2/index.html",
     "watch:scorm1.2": "npx parcel serve src/entry/scorm1.2/index.html",
