--- a/.npmignore
+++ b/.npmignore
@@ -26,3 +26,14 @@ Makefile
 .gitmodules
 shell.nix
 tests
+docs
+gulpfile.js
+patches
+.parcel-cache
+.parcelrc
+.env
+resources
+review
+parcel-bundle-reports
+
+!dist/up_/up_/assets/logo_192.png
