readded elm-patch submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "patches/elm-break-dom"]
 	path = patches/elm-break-dom
 	url = https://github.com/andre-dietrich/elm-break-dom
+[submodule "patches/elm-patch"]
+	path = patches/elm-patch
+	url = https://github.com/andre-dietrich/elm-patches
