--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "echarts-wordcloud": "^2.1.0",
     "elm": "^0.19.1-5",
     "elm-hot": "^1.1.6",
+    "elm-optimize-level-2": "^0.3.5",
     "elm-review": "^2.12.0",
     "elm-test": "^0.19.1-revision6",
     "eslint": "^7.32.0",
