updated npm config

--- a/.github/workflows/build-editor.yml
+++ b/.github/workflows/build-editor.yml
@@ -43,7 +43,14 @@ jobs:
       - name: Make
         run: make editor2
 
+      - name: Configure npm
+        run: |
+          npm config set //registry.npmjs.org/:_authToken ${NODE_AUTH_TOKEN}
+          npm config list
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_PUBLISH_KEY }}
+
       - name: Publish to npm
-        run: npm publish
+        run: npm publish --access public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_PUBLISH_KEY }}
