hotfix: Dexie patch on new file in lib

--- a/patches/Makefile
+++ b/patches/Makefile
@@ -4,4 +4,4 @@ patch-elm:
 	cd elm-patch && make all
 
 patch-dexie:
-	patch -u ../node_modules/dexie/dist/dexie.es.js Dexie.patch
+	patch -u ../node_modules/dexie/dist/dexie.mjs Dexie.patch
