--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "@typescript-eslint/eslint-plugin": "^8.11.0",
     "@typescript-eslint/parser": "^8.11.0",
     "@webcomponents/webcomponentsjs": "^2.8.0",
+    "abortcontroller-polyfill": "^1.7.8",
     "ace-builds": "^1.37.5",
     "caniuse-lite": "^1.0.30001700",
     "crypto-browserify": "^3.5.1",
@@ -97,6 +98,10 @@
     "uint8-to-base64": "^0.2.0",
     "util": "^0.12.5",
     "workbox-cli": "^7.1.0",
+    "workbox-core": "^7.3.0",
+    "workbox-precaching": "^7.3.0",
+    "workbox-routing": "^7.3.0",
+    "workbox-strategies": "^7.3.0",
     "y-utility": "^0.1.3",
     "yjs": "^13.6.12"
   },
