--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   ],
   "scripts": {
     "clean": "rm -rf dist .parcel-cache",
-    "sw": "npx workbox injectManifest workbox-config.js",
+    "sw": "npx workbox injectManifest workbox-config.js && rm dist/sw.js",
     "translate": "elm-i18n-gen lia-localization/locale src/elm/Translations.elm",
     "test": "npx elm-test",
     "analyze": "npm run clean && npx parcel build --no-source-maps --reporter @parcel/reporter-bundle-analyzer src/entry/app/index.html",
