--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   ],
   "scripts": {
     "clean": "rm -rf dist .parcel-cache",
-    "sw": "npx workbox injectManifest workbox-config.js && rm dist/sw.js",
+    "sw": "npx workbox injectManifest workbox-config.js",
     "translate": "elm-i18n-gen lia-localization/locale src/elm/Translations.elm",
     "test": "npx elm-test",
     "analyze": "npm run clean && npx parcel build --no-source-maps --reporter @parcel/reporter-bundle-analyzer src/entry/app/index.html",
@@ -98,10 +98,6 @@
     "uint8-to-base64": "^0.2.0",
     "util": "^0.12.5",
     "workbox-cli": "^7.1.0",
-    "workbox-core": "^7.3.0",
-    "workbox-precaching": "^7.3.0",
-    "workbox-routing": "^7.3.0",
-    "workbox-strategies": "^7.3.0",
     "y-utility": "^0.1.3",
     "yjs": "^13.6.12"
   },
