--- a/package.json
+++ b/package.json
@@ -24,20 +24,20 @@
   ],
   "scripts": {
     "clean": "rm -rf dist .parcel-cache",
-    "inject-sw": "node scripts/inject-sw.js",
+    "sw": "npx workbox injectManifest workbox-config.js",
     "translate": "elm-i18n-gen lia-localization/locale src/elm/Translations.elm",
     "test": "npx elm-test",
     "analyze": "npm run clean && npx parcel build --no-source-maps --reporter @parcel/reporter-bundle-analyzer src/entry/app/index.html",
     "prebuild": "npx parcel build --no-source-maps --no-optimize --public-url . src/entry/app/index.html",
     "watch": "npm run watch:dev",
     "build": "npm run build:app",
-    "build:app": "npm run clean && npx parcel build --no-source-maps --public-url . src/entry/app/index.html && npm run inject-sw",
+    "build:app": "npm run clean && npx parcel build --no-source-maps --public-url . src/entry/app/index.html && npm run sw",
     "watch:app": "npx parcel serve src/entry/app/index.html --open",
     "build:indexeddb": "npm run clean && npx parcel build --no-source-maps --public-url . src/entry/indexeddb/index.html",
     "watch:indexeddb": "npx parcel serve src/entry/indexeddb/index.html --open",
     "watch:base": "npx parcel serve src/entry/base/index.html",
     "build:base": "npm run clean && npx parcel build --no-source-maps --public-url . src/entry/base/index.html",
-    "build:dev": "npm run clean && npx parcel build --no-source-maps --public-url . src/entry/dev/index.html && npm run inject-sw",
+    "build:dev": "npm run clean && npx parcel build --no-source-maps --public-url . src/entry/dev/index.html && npm run sw",
     "watch:dev": "npx parcel serve src/entry/dev/index.html --open",
     "build:library": "npm run clean && npx parcel build --no-source-maps --public-url . src/entry/library/index.ts",
     "watch:library": "npx parcel serve src/entry/library/index.html --open",
@@ -97,11 +97,7 @@
     "typescript": "^5.6.3",
     "uint8-to-base64": "^0.2.0",
     "util": "^0.12.5",
-    "workbox-cli": "^7.3.0",
-    "workbox-core": "^7.3.0",
-    "workbox-precaching": "^7.3.0",
-    "workbox-routing": "^7.3.0",
-    "workbox-strategies": "^7.3.0",
+    "workbox-cli": "^7.1.0",
     "y-utility": "^0.1.3",
     "yjs": "^13.6.12"
   },
