--- a/package.json
+++ b/package.json
@@ -112,6 +112,10 @@
       "staticPath": "node_modules/katex/dist/katex.min.css"
     },
     {
+      "staticPath": "node_modules/katex/dist/fonts",
+      "staticOutPath": "fonts"
+    },
+    {
       "staticPath": "node_modules/ace-builds/src-min-noconflict"
     }
   ],
