--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -49,7 +49,7 @@ jobs:
 
       - name: Create ZIP artifact
         run: |
-          zip -r WWW.zip LiaScript/dist
+          zip -r www.zip LiaScript/dist/*
 
       - name: Create Release
         id: create_release
@@ -68,6 +68,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: WWW.zip
-          asset_name: WWW.zip
+          asset_path: www.zip
+          asset_name: www.zip
           asset_content_type: application/zip
