--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "https://github.com/LiaScript/docs/README.md"
   ],
   "scripts": {
+    "postinstall": "patch-package",
     "clean": "rm -rf dist .parcel-cache",
     "sw": "npx workbox injectManifest workbox-config.js",
     "translate": "elm-i18n-gen lia-localization/locale src/elm/Translations.elm",
@@ -120,6 +121,7 @@
     "test": "tests"
   },
   "dependencies": {
-    "pako": "^2.1.0"
+    "pako": "^2.1.0",
+    "patch-package": "^8.0.0"
   }
 }
