--- a/package.json
+++ b/package.json
@@ -72,7 +72,7 @@
     "@webcomponents/webcomponentsjs": "^2.8.0",
     "abortcontroller-polyfill": "^1.7.8",
     "ace-builds": "^1.43.4",
-    "caniuse-lite": "^1.0.30001755",
+    "caniuse-lite": "^1.0.30001757",
     "crypto-browserify": "^3.5.1",
     "dexie": "^4.0.11",
     "easy-speech": "^2.4.0",
@@ -83,7 +83,7 @@
     "elm-optimize-level-2": "^0.3.5",
     "elm-review": "^2.13.4",
     "elm-test": "^0.19.1-revision12",
-    "eslint": "^9.36.0",
+    "eslint": "^9.39.1",
     "events": "^3.3.0",
     "jszip": "^3.10.1",
     "katex": "^0.16.25",
@@ -97,7 +97,8 @@
     "pdfast": "^0.2.0",
     "process": "^0.11.10",
     "resize-observer-polyfill": "^1.5.1",
-    "sass": "^1.94.0",
+    "sass": "^1.94.2",
+    "svgo": "^3.3.2",
     "tsc": "^2.0.4",
     "typescript": "^5.8.3",
     "uint8-to-base64": "^0.2.1",
